--- a/public/index.html
+++ b/public/index.html
@@ -24,6 +24,19 @@
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
     <title>Unofficial Chimeraland Wikipedia</title>
+    <!-- Global site tag (gtag.js) - Google Analytics -->
+    <script
+      async
+      src="https://www.googletagmanager.com/gtag/js?id=UA-106238155-1"></script>
+    <script>
+      window.dataLayer = window.dataLayer || [];
+      function gtag() {
+        dataLayer.push(arguments);
+      }
+      gtag('js', new Date());
+
+      gtag('config', 'UA-106238155-1');
+    </script>
   </head>
 
   <body>
