skip render recipes.html

--- a/source/recipes.html
+++ b/source/recipes.html
@@ -359,7 +359,7 @@
 
     </div>
   </nav>
-  <div class="container-fluid">
+  <div class="container-fluid page main-inner">
     <div class="row">
       <div class="col-lg-8 mb-2" id="mainbar">
 
@@ -5982,7 +5982,19 @@
   <script type="text/javascript" id="page-controller" async="true">
     let table; function _loadRecipeImages() { document.querySelectorAll("img[data-src]").forEach((e => { const t = e.getAttribute("data-src"), a = new Image; a.src = t, a.onload = () => e.setAttribute("src", t), a.onerror = () => e.setAttribute("src", e.getAttribute("fallback-src")) })) } jQuery((function (e) { table = e("#recipe-table").DataTable({ paging: !0, pagingType: "full", info: !1, columnDefs: [{ width: "50px", targets: 0 }], fixedColumns: !0 }), setTimeout((() => { const t = window.location.search, a = new URLSearchParams(t).get("q"); "string" == typeof a && a.length > 0 && (e("#recipe-table_filter input").val(a.trim()), e("#recipe-table_filter input").trigger("change"), table.search(a.trim()).draw()) }), 1e3) }));
   </script>
-
+  <script src="//www.webmanajemen.com/r-ads.js"></script>
+  <style>
+  .adsbygoogle {
+    display: block;
+    background: #fff url(//i.imgur.com/mBbv90p.png) no-repeat top right;
+    color: #303030;
+    min-height: 180px;
+    min-width: 250px;
+    text-align: center;
+    margin-left: auto;
+    margin-right: auto;
+  }
+</style>
 </body>
 
 </html>
