--- a/src-posts/index2/update.html
+++ b/src-posts/index2/update.html
@@ -22,21 +22,27 @@
   <p>
     Newer <b>Chimeraland Wikipedia</b> By L3n4r0x in
     <a
-      href="https://www.webmanajemen.com/chimeraland/index.html">https://www.webmanajemen.com/chimeraland/index.html</a>
+      href="/chimeraland/index.html">/chimeraland/index.html</a>
   </p>
 
   <ul>
     <li>
-      <a href="https://www.webmanajemen.com/chimeraland/index.html">Chimeraland Wiki</a>
+      <a href="/chimeraland/categories/Games/Chimeraland/Monsters/">Chimeraland Monsters</a>
     </li>
     <li>
-      <a href="https://www.webmanajemen.com/chimeraland/recipes.html">Cooking Recipes List</a>
+      <a href="/chimeraland/categories/Games/Chimeraland/Attendants/">Chimeraland Attendants</a>
     </li>
     <li>
-      <a href="https://www.webmanajemen.com/chimeraland/monsters/white-maiden.html">White Maiden</a>
+      <a href="/chimeraland/categories/Games/Chimeraland/Materials/">Chimeraland Materials</a>
     </li>
     <li>
-      <a href="https://www.webmanajemen.com/chimeraland/monsters/dragon-horse.html">Dragon Horse</a>
+      <a href="/chimeraland/recipes.html">Cooking Recipes List</a>
+    </li>
+    <li>
+      <a href="/chimeraland/monsters/white-maiden.html">White Maiden</a>
+    </li>
+    <li>
+      <a href="/chimeraland/monsters/dragon-horse.html">Dragon Horse</a>
     </li>
   </ul>
 </blockquote>
