--- a/src-posts/index2/update.html
+++ b/src-posts/index2/update.html
@@ -36,6 +36,9 @@
       <a href="/chimeraland/categories/Games/Chimeraland/Materials/">Chimeraland Materials</a>
     </li>
     <li>
+      <a href="/chimeraland/categories/Games/Chimeraland/Recipes/">Chimeraland Recipes</a>
+    </li>
+    <li>
       <a href="/chimeraland/recipes.html">Cooking Recipes List</a>
     </li>
     <li>
