--- a/blacklist-player.html
+++ b/blacklist-player.html
@@ -942,7 +942,7 @@
 <tr>
 <td style="text-align:left" notranslate="true" class=" notranslate" id="Pokemonn">Pokemonn</td>
 <td style="text-align:left"></td>
-<td style="text-align:left">pemilik sebelumnya akun ini adalah SCAMMER ruby, korban scam <strong>IlmuAkhirZmn</strong></td>
+<td style="text-align:left">SCAMMER ruby, korban scam terakhir <strong>IlmuAkhirZmn</strong></td>
 </tr>
 <tr>
 <td style="text-align:left" notranslate="true" class=" notranslate" id="Tusboll">Tusboll</td>
