chore: released from https://github.com/dimaslanjaka/static-blog-generator-hexo/commit/7195a7b327a3ed0af9c71066aec510b149853390

--- a/Recipes-list/table.html
+++ b/Recipes-list/table.html
@@ -27,7 +27,7 @@
 -->
 
 <h5>Add New Chimeraland Recipe</h5>
-<iframe src="https://backend.webmanajemen.com/chimeraland/recipes.php" frameborder="0" width="100%" height="700px" title=" - https://backend.webmanajemen.com/chimeraland/recipes.php"></iframe>
+<iframe src="https://backend.webmanajemen.com/chimeraland/recipes.php" frameborder="0" width="100%" height="700px"></iframe>
 
 <!-- references
   https://zilliongamer.com/chimeraland/c/items-list/food-epic-grad
