--- a/recipes.html
+++ b/recipes.html
@@ -332,7 +332,7 @@
             <a class="nav-link" href="/chimeraland/recipes.html">Recipes</a>
           </li>
           <li class="nav-item d-none">
-            <a class="nav-link" href="https://hexo-backend.herokuapp.com/chimeraland/attendants" rel="nofollow noopener"><span class="material-icons"> add_circle </span> Attendant</a>
+            <a class="nav-link" href="https://www.webmanajemen.com/page/safelink.html?url=aHR0cHM6Ly9oZXhvLWJhY2tlbmQuaGVyb2t1YXBwLmNvbS9jaGltZXJhbGFuZC9hdHRlbmRhbnRz" rel="nofollow noopener"><span class="material-icons"> add_circle </span> Attendant</a>
           </li>
         </ul>
         <form class="d-flex" aria="search-box">
@@ -4316,7 +4316,7 @@
               </ul>
               <p>Video Tutorial:<br>Cara unlock <strong>Stove II</strong></p>
               <div class="video-container">
-                <iframe src="https://www.youtube.com/embed/I_QH6jv7rzA" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" loading="lazy" allowfullscreen="true" title="Cooking Recipes Chimeraland Informations - WMI - https://www.youtube.com/embed/I_QH6jv7rzA"></iframe>
+                <iframe src="https://www.youtube.com/embed/I_QH6jv7rzA" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" loading="lazy" allowfullscreen="true"></iframe>
               </div>
 
               <h3 id="Windoo">
@@ -4324,7 +4324,7 @@
               </h3>
               <p>Cara mendapatkan attendant <strong>Windoo</strong></p>
               <div class="video-container">
-                <iframe src="https://www.youtube.com/embed/P5uAFGr33YA" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" loading="lazy" allowfullscreen="true" title="Cooking Recipes Chimeraland Informations - WMI - https://www.youtube.com/embed/P5uAFGr33YA"></iframe>
+                <iframe src="https://www.youtube.com/embed/P5uAFGr33YA" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" loading="lazy" allowfullscreen="true"></iframe>
               </div>
 
               <h3 id="Vulorman">
@@ -4332,7 +4332,7 @@
               </h3>
               <p>Cara mendapatkan attendant <strong>Vulorman</strong></p>
               <div class="video-container">
-                <iframe src="https://www.youtube.com/embed/5K-X_U2YwAI" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" loading="lazy" allowfullscreen="true" title="Cooking Recipes Chimeraland Informations - WMI - https://www.youtube.com/embed/5K-X_U2YwAI"></iframe>
+                <iframe src="https://www.youtube.com/embed/5K-X_U2YwAI" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" loading="lazy" allowfullscreen="true"></iframe>
               </div>
 
               <h3 id="Astakat">
@@ -4340,7 +4340,7 @@
               </h3>
               <p>Cara mendapatkan attendant <strong>Astakat</strong></p>
               <div class="video-container">
-                <iframe src="https://www.youtube.com/embed/NYYoisSMqkM" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" loading="lazy" allowfullscreen="true" title="Cooking Recipes Chimeraland Informations - WMI - https://www.youtube.com/embed/NYYoisSMqkM"></iframe>
+                <iframe src="https://www.youtube.com/embed/NYYoisSMqkM" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" loading="lazy" allowfullscreen="true"></iframe>
               </div>
 
               <p><strong>Chimeraland One Pot Dish</strong> is an food that can be given to all types of pets and
@@ -4409,7 +4409,7 @@
             <script type="text/javascript">
               (function () { var trbtnId = trbtn.init('Support Me at Trakteer', '#030303', 'https://trakteer.id/dimaslanjaka', 'https://cdn.trakteer.id/images/embed/trbtn-icon.webp', '40'); trbtn.draw(trbtnId); })();
             </script>
-            <noscript><a href="https://trakteer.id/dimaslanjaka" target="_blank" rel="nofollow noopener"><img id="wse-buttons-preview" src="https://cdn.trakteer.id/images/embed/trbtn-black-5.png" style="border:0px;height:40px;" alt="Trakteer Saya" height="40"></a></noscript>
+            <noscript><a href="https://www.webmanajemen.com/page/safelink.html?url=aHR0cHM6Ly90cmFrdGVlci5pZC9kaW1hc2xhbmpha2E=" target="_blank" rel="nofollow noopener"><img id="wse-buttons-preview" src="https://cdn.trakteer.id/images/embed/trbtn-black-5.png" style="border:0px;height:40px;" alt="Trakteer Saya" height="40"></a></noscript>
           </div>
         </div>
         <div class="card bg-dark text-white mb-2 border border-light" id="sidebar-lang">
@@ -4872,52 +4872,52 @@
           <tr>
             <th rowspan="4">Download Links</th>
             <td>
-              <a href="https://play.google.com/store/apps/details?id=com.proximabeta.fancyworld&amp;hl=en_IN&amp;gl=PH" target="_blank" rel="noreferrer noopener">
+              <a href="https://www.webmanajemen.com/page/safelink.html?url=aHR0cHM6Ly9wbGF5Lmdvb2dsZS5jb20vc3RvcmUvYXBwcy9kZXRhaWxzP2lkPWNvbS5wcm94aW1hYmV0YS5mYW5jeXdvcmxkJmFtcDtobD1lbl9JTiZhbXA7Z2w9UEg=" target="_blank" rel="noreferrer noopener">
                 Playstore
               </a>
             </td>
           </tr>
           <tr>
             <td>
-              <a href="https://apps.apple.com/us/app/chimeraland/id1610490305" target="_blank" rel="noreferrer noopener">
+              <a href="https://www.webmanajemen.com/page/safelink.html?url=aHR0cHM6Ly9hcHBzLmFwcGxlLmNvbS91cy9hcHAvY2hpbWVyYWxhbmQvaWQxNjEwNDkwMzA1" target="_blank" rel="noreferrer noopener">
                 Apple Store
               </a>
             </td>
           </tr>
           <tr>
             <td>
-              <a href="https://www.chimeraland.com/faqs.html" target="_blank" rel="noopener noreferrer">Download For
+              <a href="https://www.webmanajemen.com/page/safelink.html?url=aHR0cHM6Ly93d3cuY2hpbWVyYWxhbmQuY29tL2ZhcXMuaHRtbA==" target="_blank" rel="noopener noreferrer">Download For
                 PC</a>
             </td>
           </tr>
           <tr>
             <td>
-              <a href="https://store.steampowered.com/app/1913730/Chimeraland/" target="_blank" rel="noopener noreferrer">Chimeraland Global on Steam</a>
+              <a href="https://www.webmanajemen.com/page/safelink.html?url=aHR0cHM6Ly9zdG9yZS5zdGVhbXBvd2VyZWQuY29tL2FwcC8xOTEzNzMwL0NoaW1lcmFsYW5kLw==" target="_blank" rel="noopener noreferrer">Chimeraland Global on Steam</a>
             </td>
           </tr>
           <tr>
             <th>Official Social Media</th>
-            <td><a href="http://www.facebook.com/chimeraland" target="_blank" rel="noreferrer noopener">
+            <td><a href="https://www.webmanajemen.com/page/safelink.html?url=aHR0cDovL3d3dy5mYWNlYm9vay5jb20vY2hpbWVyYWxhbmQ=" target="_blank" rel="noreferrer noopener">
                 Facebook
               </a>
               ,
-              <a href="https://twitter.com/Chimeraland" target="_blank" rel="noreferrer noopener">
+              <a href="https://www.webmanajemen.com/page/safelink.html?url=aHR0cHM6Ly90d2l0dGVyLmNvbS9DaGltZXJhbGFuZA==" target="_blank" rel="noreferrer noopener">
                 Twitter
               </a>
               ,
-              <a href="https://discord.com/invite/5SCQx6R3Ds" target="_blank" rel="noreferrer noopener">
+              <a href="https://www.webmanajemen.com/page/safelink.html?url=aHR0cHM6Ly9kaXNjb3JkLmNvbS9pbnZpdGUvNVNDUXg2UjNEcw==" target="_blank" rel="noreferrer noopener">
                 Discord
               </a>
               ,
-              <a href="https://www.youtube.com/c/Chimeraland" target="_blank" rel="noreferrer noopener">
+              <a href="https://www.webmanajemen.com/page/safelink.html?url=aHR0cHM6Ly93d3cueW91dHViZS5jb20vYy9DaGltZXJhbGFuZA==" target="_blank" rel="noreferrer noopener">
                 Youtube
               </a>
               ,
-              <a href="https://www.instagram.com/chimeralandgame/" target="_blank" rel="noreferrer noopener">
+              <a href="https://www.webmanajemen.com/page/safelink.html?url=aHR0cHM6Ly93d3cuaW5zdGFncmFtLmNvbS9jaGltZXJhbGFuZGdhbWUv" target="_blank" rel="noreferrer noopener">
                 Instagram
               </a>
               ,
-              <a href="https://www.tiktok.com/@chimeraland" target="_blank" rel="noreferrer noopener">
+              <a href="https://www.webmanajemen.com/page/safelink.html?url=aHR0cHM6Ly93d3cudGlrdG9rLmNvbS9AY2hpbWVyYWxhbmQ=" target="_blank" rel="noreferrer noopener">
                 TikTok
               </a>
             </td>
@@ -4954,7 +4954,7 @@
           <a href="https://webmanajemen.com/chimeraland/Pets" class="nav-link px-2 text-muted">Pets</a>
         </li>
         <li class="nav-item">
-          <a href="https://www.facebook.com/secretnetworkforces" class="nav-link px-2 text-muted" rel="nofollow noopener">Fanpage</a>
+          <a href="https://www.webmanajemen.com/page/safelink.html?url=aHR0cHM6Ly93d3cuZmFjZWJvb2suY29tL3NlY3JldG5ldHdvcmtmb3JjZXM=" class="nav-link px-2 text-muted" rel="nofollow noopener">Fanpage</a>
         </li>
         <li class="nav-item">
           <a href="https://webmanajemen.com/chimeraland/About.html" class="nav-link px-2 text-muted">About</a>
