--- a/Pets/table.html
+++ b/Pets/table.html
@@ -23,7 +23,7 @@
 </table>
 
 <h5>Add New Pet Information</h5>
-<iframe src="https://backend.webmanajemen.com/chimeraland/pets.php" frameborder="0" width="100%" height="600px" style="overflow: hidden;" title=" - https://backend.webmanajemen.com/chimeraland/pets.php"></iframe>
+<iframe src="https://backend.webmanajemen.com/chimeraland/pets.php" frameborder="0" width="100%" height="600px" style="overflow: hidden;"></iframe>
 
 <div id="raw-data">
   <!-- extract-text /source/backend/chimeraland/pets.json -->
