chore: released from https://github.com/dimaslanjaka/static-blog-generator-hexo/commit/10b9a41693e937824b31f28abb1720daaab3bdcc

--- a/blacklist-player/translator.html
+++ b/blacklist-player/translator.html
@@ -93,7 +93,7 @@
     color: #e0e0e0;
   }
 </style>
-<link id="sitemap-site-url" type="application/text+xml" rel="sitemap" href="https://www.webmanajemen.com/sitemap.xml"><link id="rss-site-url" type="application/rss+xml" rel="alternate" href="https://www.webmanajemen.com/rss.xml"><link id="atom-site-url" type="application/atom+xml" rel="alternate" href="https://www.webmanajemen.com/atom.xml"></head><body><div id="translator-wrapper" notranslate="">
+<link id="rss-site-url" type="application/rss+xml" rel="alternate" href="https://www.webmanajemen.com/rss.xml"><link id="atom-site-url" type="application/atom+xml" rel="alternate" href="https://www.webmanajemen.com/atom.xml"></head><body><div id="translator-wrapper" notranslate="">
   <img src="https://upload.wikimedia.org/wikipedia/commons/d/db/Google_Translate_Icon.png" alt="Translate" id="t-icon">
   <select id="translate-language">
     <option value="en" selected="selected">English</option>
