chore: released from https://github.com/dimaslanjaka/static-blog-generator-hexo/commit/5fc8ed290f4c17bf80ae52373a6c5a5583cfc06b

--- a/blacklist-player.html
+++ b/blacklist-player.html
@@ -667,6 +667,7 @@
 <img src="https://user-images.githubusercontent.com/12471057/225884943-abb05d22-bb22-43e0-8129-a71ce5b9b159.png" alt="image" title="image" itemprop="image"></p>
 <h2 id="semua-screenshots" tabindex="-1"><a href="#semua-screenshots">semua Screenshots</a></h2>
 <p><img src="https://user-images.githubusercontent.com/12471057/228448750-03135c91-cd6a-412e-b26d-23c8c3fa890c.png" alt="image" title="image" itemprop="image"></p>
+<img src="https://github.com/dimaslanjaka/static-blog-generator-hexo/raw/master/site/multisite/chimeraland/src/posts/blacklist-player/images/BangPo.jpeg" alt="BangPo.jpeg" title="BangPo.jpeg" itemprop="image">
 <img src="https://github.com/dimaslanjaka/static-blog-generator-hexo/raw/master/site/multisite/chimeraland/src/posts/blacklist-player/images/batagor%20&amp;%20sus%20&amp;%20unknown.jpg" alt="batagor &amp; sus &amp; unknown.jpg" title="batagor &amp; sus &amp; unknown.jpg" itemprop="image">
 <img src="https://github.com/dimaslanjaka/static-blog-generator-hexo/raw/master/site/multisite/chimeraland/src/posts/blacklist-player/images/black%20sword%20&amp;%20sakuraz.jpg" alt="black sword &amp; sakuraz.jpg" title="black sword &amp; sakuraz.jpg" itemprop="image">
 <img src="https://github.com/dimaslanjaka/static-blog-generator-hexo/raw/master/site/multisite/chimeraland/src/posts/blacklist-player/images/blackblades%20&amp;%20Yayan%20bae.jpg" alt="blackblades &amp; Yayan bae.jpg" title="blackblades &amp; Yayan bae.jpg" itemprop="image">
