chore: released from https://github.com/dimaslanjaka/static-blog-generator-hexo/commit/2fe3e40d51310c3df0771f84e42288308fae4f2b
commit hash: 2fe3e4

commit url: https://github.com/dimaslanjaka/static-blog-generator-hexo/commit/2fe3e40d51310c3df0771f84e42288308fae4f2b

runner: https://github.com/dimaslanjaka/static-blog-generator-hexo/commit/2fe3e40d51310c3df0771f84e42288308fae4f2b/checks/5084203714

--- a/chimeraland-Pets/table.html
+++ b/chimeraland-Pets/table.html
@@ -1,4 +1,4 @@
-<html><head><link id="rss-site-url" type="application/rss+xml" rel="alternate" href="https://www.webmanajemen.com/rss.xml"><link id="atom-site-url" type="application/atom+xml" rel="alternate" href="https://www.webmanajemen.com/atom.xml"></head><body><blockquote>
+<html><head></head><body><blockquote>
   <ul>
     <li>
       <u><b>Attributes Conversion Rate</b></u> untuk menentukan persentase <u><b>Bloodline</b></u> hewan peliharaan yang
