--- a/chimeraland-Recipes-list/translator.html
+++ b/chimeraland-Recipes-list/translator.html
@@ -32,7 +32,7 @@
   }
 </style>
 
-<link id="rss-site-url" type="application/rss+xml" rel="alternate" href="https://www.webmanajemen.com/rss.xml"><link id="atom-site-url" type="application/atom+xml" rel="alternate" href="https://www.webmanajemen.com/atom.xml"></head><body><div class="goog-widget-wrapper">
+</head><body><div class="goog-widget-wrapper">
   <div id="google_translate_element"></div> <button onclick="restoreLang()" class="notranslate" id="resetLang">Show
     Original Language</button>
 </div>
