--- a/chimeraland-index2/update.html
+++ b/chimeraland-index2/update.html
@@ -17,7 +17,7 @@
     content: '\201D';
   }
 </style>
-<link id="rss-site-url" type="application/rss+xml" rel="alternate" href="https://www.webmanajemen.com/rss.xml"><link id="atom-site-url" type="application/atom+xml" rel="alternate" href="https://www.webmanajemen.com/atom.xml"></head><body><h2 id="update-notice">Update Notice</h2>
+</head><body><h2 id="update-notice">Update Notice</h2>
 <blockquote id="update-notice-content">
   <p>
     Newer <b>Chimeraland Wikipedia</b> By L3n4r0x in
