--- a/chimeraland-pet-attendant-delicacies/content.html
+++ b/chimeraland-pet-attendant-delicacies/content.html
@@ -9,7 +9,7 @@
   }
 </style>
 
-<link id="rss-site-url" type="application/rss+xml" rel="alternate" href="https://www.webmanajemen.com/rss.xml"><link id="atom-site-url" type="application/atom+xml" rel="alternate" href="https://www.webmanajemen.com/atom.xml"></head><body><div id="bootstrap-wrapper">
+</head><body><div id="bootstrap-wrapper">
   <h2 id="Pets">Pets</h2>
 
   <div id="p-tbl">
